# derivatives-lab

./: .gitignore  Makefile  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backtesting/: metrics.py
data/: fetcher.py
ml/: deep_hedging.py  vol_surface_nn.py
models/: __init__.py  binomial.py  black_scholes.py  heston.py  local_vol.py  merton.py  monte_carlo.py  pde_solver.py
reports/: MODEL_ZOO_FINDINGS.md  make_figures.py  make_v5_figure.py
research/: 00_overview.ipynb  01_model_zoo_pricing.ipynb  02_deep_hedging_rl.ipynb  03_prediction_markets_pde.ipynb  04_real_smile_calibration.ipynb  05_real_returns_jumps.ipynb  06_mv_delta_hedging.ipynb  07_real_gamma_attribution.ipynb  08_deep_hedge_oos.ipynb  09_pm_longshot.ipynb  README.md
tests/: test_binomial.py  test_black_scholes_digital.py  test_deep_hedging.py  test_fetcher.py  test_heston.py  test_heston_paths.py  test_local_vol.py  test_merton.py  test_metrics.py  test_monte_carlo.py  test_pde_solver.py
