[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "derivatives-lab"
version = "0.1.0"
description = "Quant derivatives lab: pricing (Black-Scholes, Heston, Monte Carlo, local vol), RL deep hedging, and prediction markets as derivatives"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Batuhan Boztepe" }]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "pyarrow>=14",      # parquet engine for the data/fetcher.py cache (df.to_parquet / read_parquet)
    "matplotlib>=3.8",
    "yfinance>=0.2.36",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4",
    "torch>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]
research = [
    "duckdb>=0.10",   # V6 reads the Polymarket trade dump via remote DuckDB (cache-miss only)
]
all = [
    "derivatives-lab[ml,dev,research]",
]

[project.urls]
Repository = "https://github.com/batuhanboztepe0/derivatives-lab"

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "backtesting*", "ml*"]

# ── Ruff (linting + formatting) ────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["research/"]   # executed notebooks are research artefacts, not linted

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore  = [
    "E501",   # line-length handled by formatter
    "B008",   # function calls in default args (common in dataclasses)
    "UP007",  # X | Y union syntax — keep Optional[] for clarity
    "E701",   # one-line if/else — deliberate aligned house style (e.g. barrier branches)
    "E731",   # lambda assignment — used as a local one-liner in heston calibration
]

# ── Pytest ──────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths     = ["tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts       = "-v --tb=short"

# ── Mypy ────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true   # numpy/scipy stubs optional
